2011-09-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Update jQuery reference

2011-09-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Simplify retrieval of labels in new CE wizards

2011-08-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use an official version number
	* [TASK] Split locallang*.xml into <langKey>.locallang*.xml files

2011-08-24  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29207: Cleanup task crashes if web service does not exist
	* [TASK] Reintroduce subcategory "API" in Extension Manager

2011-08-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add proper fallback between version 1.0 and version 2.0
	* [BUGFIX] Pi1 FlexForm crashes in backend

2011-08-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add support for both versions 1.0 and 2.0 of the Web Service

2011-07-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Throw RuntimeException if Fluid templates are activated without having ext "fluid" loaded

2011-07-28  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Parametrized URL does not work with WS 2.0 as it lacks the community parameter

2011-07-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-15  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-12  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] CE wizards for pi1 and pi2 are using deprecated methods in TYPO3 4.6

2011-06-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use mediumblob instead of mediumtext for the caching table

2011-06-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] #27610: Update documentation for advanced caching with GetLatestChanges
	* [TASK] Update maximal TYPO3 requirement to 4.6
	* [TASK][DOC] Rework the eGov API cache configuration

2011-06-24  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Basic implementation of the WS method GetLatestChanges