@@ -1,0 +1,63 @@
+<?php
+/***************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2011 Xavier Perseguers <xavier@causal.ch>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
+
+/**
+ * A cache frontend for any kinds of PHP variables which let the user
+ * take care of manual flushing.
+ *
+ * @category    Cache\Frontend
+ * @package     TYPO3
+ * @subpackage  tx_egovapi
+ * @author      Xavier Perseguers <xavier@causal.ch>
+ * @copyright   Causal Sàrl / SECO (http://www.cyberadmin.ch/)
+ * @license     http://www.gnu.org/copyleft/gpl.html
+ * @version     SVN: $Id$
+ */
+class tx_egovapi_cache_frontend_VariableFrontend extends t3lib_cache_frontend_VariableFrontend {
+
+	/**
+	 * Removes all cache entries of this cache.
+	 *
+	 * @return void
+	 */
+	public function flush() {
+		// DO NOTHING, pruning is done with flushByTags() from a scheduler task
+
+		//if (func_get_args() === 0) {
+		//	//
+		//} else {
+		//	if (func_get_arg(0) === 'really-flush') {
+		//		parent::flush();
+		//	}
+		//}
+	}
+
+}
+
+
+if (defined('TYPO3_MODE') && isset($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/egovapi/Classes/Cache/Frontend/VariableFrontend.php'])) {
+	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/egovapi/Classes/Cache/Frontend/VariableFrontend.php']);
+}
+
+?>
