@@ -15,6 +15,9 @@ if ($enableSelectorPlugins) {
 	$TYPO3_CONF_VARS['FE']['eID_include'][$_EXTKEY . '_pi2'] = 'EXT:' . $_EXTKEY . '/Classes/Controller/Pi2/Ajax.php';
 }
 
+// Allow manual flush of cache entries (mandatory in TYPO3 4.6)
+$GLOBALS['TYPO3_CONF_VARS']['SYS']['caching']['cacheConfigurations']['egovapi']['frontend'] = 'tx_egovapi_cache_frontend_VariableFrontend';
+
 // RealURL auto-configuration
 $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['ext/realurl/class.tx_realurl_autoconfgen.php']['extensionConfiguration'][$_EXTKEY] = 'EXT:' . $_EXTKEY . '/Classes/Hooks/RealUrl.php:tx_egovapi_hooks_realurl->addEgovApiConfig';
 
